# gradientDescent

./: CMakeLists.txt  LICENSE  README.md  SnGrid.kdev4  example.cpp  gradientDescent.kdev4  gradient_descent.h  main.cpp  math_utils.h  optim_utils.h
optimTools/: CMakeLists.txt  gradient_descent.h  matrix.h  optimTools.cpp  optim_utils.h
